--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,9 @@ button:hover {
     font-size: 18px;
     margin: 10px 0;
 }
+
+@media (max-width: 458px) {
+    button {
+        margin-top: 20px;
+    }
+}
